--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">Share</a>
-  <span style="w3-display-right">Company Name</span>
+  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right " onclick="w3_open()">Share</a>
+  <span class="w3-right w3-button">Get Outfit</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -52,3 +52,4 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 
 </body>
 </html>
+
