--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right " onclick="w3_open()">Share</a>
-  <span class="w3-right w3-button">Get Outfit</span>
+  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">Share</a>
+  <span class="w3-margin-right">Get Outfit</span>
 </header>
 
+<div class="w3-center"><img src="flapjpg.jpg" alt="Smiley face" height="400" width="300"></div>
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
