--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@ body {
   padding-bottom: 50px; /*50px for the height of the bottom navbar*/
 }
 
+#moduleContent18520661 {
+    position: fixed;
+    bottom: 0; /* the bottom edge of the element will
+                  sit against the bottom edge of the window */
+    /* other stuff */
+}
+
+
 #scroll {
 width:600px;
 height:200px;
@@ -106,7 +114,7 @@ display:block;
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div id="scroll" class="w3-container w3-bottom w3-hide-large w3-red w3-xlarge w3-padding"style="z-index:3;width:300px;font-weight:bold;">
+<div id="scroll moduleContent18520661" class="w3-container w3-bottom w3-hide-large w3-red w3-padding"style="z-index:3;width:300px;font-weight:bold;">
 <ul>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
@@ -126,3 +134,4 @@ display:block;
 
 </body>
 </html>
+
