--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ display:block;
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div id="scroll moduleContent18520661" class="w3-container w3-bottom w3-hide-large w3-red w3-padding"style="z-index:3;width:300px;font-weight:bold;">
+<div id="scroll" height="100"class="w3-container w3-center w3-hide-large w3-red w3-padding"style="width:100%;font-weight:bold;">
 <ul>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
