--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@ head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
     border: 3px solid #73AD21;
     padding: 10px;
 }
-body {
-  padding-top: 87px; /*50px for the height of the navbar + 37px for the offset*/
-  padding-bottom: 50px; /*50px for the height of the bottom navbar*/
+head {
+	postion:fixed;
 }
-
+body {
+  padding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
+  padding-bottom: 0px; /*50px for the height of the bottom navbar*/
+  margin: 0; height: 100%; overflow: hidden
+}
 #moduleContent18520661 {
     position: fixed;
     bottom: 0; /* the bottom edge of the element will
                   sit against the bottom edge of the window */
     /* other stuff */
 }
-
-
 #scroll {
-width:600px;
-height:200px;
-margin:100px auto;
+width:100%px;
+height:100%;
+margin:10px auto;
 background:#A3CBE0;
 border:2px solid #000;
 overflow:auto;
@@ -67,21 +68,6 @@ display:block;
 }
 </style>
 
-<style>
-	#carousel {
-    width: 100%;
-    height: 150px;
-    background-color: #ff0000;
-
-    overflow: visible;
-    white-space:nowrap;
-}
-
-#carousel .slide {
-    display: inline-block;
-}
-</style>
-
 <head>
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
@@ -107,14 +93,14 @@ display:block;
 </head>
 
 
-<body>
+<body style="overflow:hidden;">
 
 <div class="w3-center"><img src="flapjpg.jpg" alt="Smiley face" height="300" width="150"></div>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div id="scroll" height="100"class="w3-container w3-center w3-hide-large w3-red w3-padding"style="width:100%;font-weight:bold;">
+<div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
 <ul>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
 <li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
@@ -129,9 +115,7 @@ display:block;
 </div>
 
 <script>
-
 </script>
 
 </body>
 </html>
-
