--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 <style>
-head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;
-
-background-color: #FF69B4;}
+head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;}
 .center {
     margin: auto;
     width: 60%;
@@ -97,7 +95,7 @@ display:block;
 
 <body style="overflow:hidden;">
 
-<div class="w3-center"><img src="model.png" alt="Smiley face" height="300" width="150"></div>
+<div class="w3-center"><img src="Model.png" alt="Smiley face"></div>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
