--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;}
     border: 3px solid #73AD21;
     padding: 10px;
 }
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 head {
 	postion:fixed;
 }
@@ -95,7 +99,7 @@ display:block;
 
 <body style="overflow:hidden;">
 
-<div class="w3-center"><img src="Model.png" alt="Smiley face"></div>
+<div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
