--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ background:#A3CBE0;
 border:0px solid #000;
 overflow:auto;
 box-shadow:0 0 0px #000;
+	position: fixed;
+    bottom: 0;
 }
 #scroll ul {
 white-space:nowrap;
@@ -106,15 +108,15 @@ display:block;
 
 <div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
 <ul>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
-<li><a href="#"><img src="flapjpg.jpg" alt="" height="100" width="100"><span>Image Name</span></a></li>
+<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
 </ul>
 </div>
 
