--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@ body {
     /* other stuff */
 }
 #scroll {
-width:100%px;
-height:100%;
-margin:10px auto;
+width:100%;
+height:1;
+margin:auto;
 background:#A3CBE0;
 border:0px solid #000;
 overflow:auto;
+position:absolute;
+bottom:0;
 box-shadow:0 0 0px #000;
 }
 #scroll ul {
