--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
 head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;}
 .center {
@@ -102,6 +103,20 @@ display:block;
 <body style="overflow:hidden;">
 
 <div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
+	
+<div class="container">
+  <div class="dropup">
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#"></a></li>
+      <li><a href="#">Tops</a></li>
+      <li><a href="#">Accessories</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Dresses</a></li>
+    </ul>
+  </div>
+</div>
 
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
@@ -120,8 +135,8 @@ display:block;
 </ul>
 </div>
 
-<script>
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 </html>
