--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@ body{
   padding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
   padding-bottom: 0px; /*50px for the height of the bottom navbar*/
   margin: 0; height: 100%; overflow: hidden
-	 /* The image used */
-    background-image: "fashionShow.jpg";
-    /* Full height */
-    height: 100%; 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 #moduleContent18520661 {
     position: fixed;
@@ -123,7 +115,7 @@ display:block;
 
 <body class="bg" style="overflow:hidden;">
 
-<div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
+<div class="w3-center bg"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
 	
 <div class="container">
   <div class="dropup">
