--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@ display:block;
 	
 .bg {
     /* The image used */
-    background-image: "fashionShow.jpg";
-
+    background-image: url("img_girl.jpg");
     /* Full height */
     height: 100%; 
-
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -115,7 +113,7 @@ display:block;
 
 <body class="bg" style="overflow:hidden;">
 
-<div class="w3-center bg"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
+<div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
 	
 <div class="container">
   <div class="dropup">
