--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ display:block;
 	
 .bg {
     /* The image used */
-    background-image: url("img_girl.jpg");
+    background-image: flapjpg.jpg;
     /* Full height */
     height: 100%; 
     /* Center and scale the image nicely */
