--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@ color:#FFF;
 padding:5px 0 0;
 display:block;
 }
-	
+
 .bg {
     /* The image used */
-    background-image: flapjpg.jpg;
+    background-image: url("fashionShow.jpg");
     /* Full height */
-    height: 100%; 
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -114,7 +113,7 @@ display:block;
 <body class="bg" style="overflow:hidden;">
 
 <div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
-	
+
 <div class="container">
   <div class="dropup">
     <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
