--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ display:block;
     background-image: url("fashionShow.jpg");
     /* Full height */
     /* Center and scale the image nicely */
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
 }
