--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@ display:block;
     background-image: url("fashionShow.jpg");
     /* Full height */
     /* Center and scale the image nicely */
-    background-position: 0 300;
+    
     background-repeat: no-repeat;
     background-size: cover;
+	adding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
+  padding-bottom: 0px; /*50px for the height of the bottom navbar*/
+  margin: 0; height: 100%; overflow: hidden
 }
 </style>
 
