--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ display:block;
 </head>
 
 
-<body class="bg" style="overflow:hidden;">
+<body style="overflow:hidden;">
 
 <div class="bg">
      <div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
